src/app/card-list/card-list.component.scss
.banner-container {
  display: flex;
  align-items: center;
  flex-direction: column;
  // background-color: pink;
  height: auto;
}
.filter-icon-container {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;

  top: 20px;
  right: 15px;
  height: 52px;
  width: 52px;
  border-radius: 50%;
  border: none;
  // padding: 7px 5px;
  cursor: pointer;
  background-color: #595959;
  box-shadow: none !important;
  // z-index: 2;
  opacity: 1;
}
.arrow-position {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 20px;
  left: 15px;
  cursor: pointer;
  border-radius: 50%;
  width: 47px;
  height: 47px;
  background-color: white;
  border: solid 2px black;
  animation: appearButtons 3s ease forwards;
  box-shadow: none;
  opacity: 1;
  //  z-index: 2;
}

.text-position {
  position: absolute;
  top: 70px;
  left: 60px;
  font-family: "Calibri-Bold", sans-serif;
  font-size: clamp(2.5rem, 3.5vw, 2.8rem);
  letter-spacing: 1px;
  // z-index: 2;
  opacity: 1;
  animation: appearButtons 3s ease forwards;
}

.hover-effect:hover {
  // box-shadow: none;
  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
}

.svg-filter {
  // background-color: red;
  height: 52px;
  width: 52px;
  border-radius: 50%;
  background-color: #595959;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
}

.filter-dropdown {
  z-index: 2;
  // background-color: red;
}
.filter-dropdown a {
  color: black;
  // text-align: center;
  font-family: "Calibri-Bold", sans-serif;
  font-size: 18px;
  white-space: nowrap; /* Prevent line breaks */
  text-decoration: none;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 135px;
  // height: 100vh;
  // background-color: #548235;
  width: auto;
  // overflow-x: auto;
}

.grid {
  display: grid;
  grid-template-columns: 1fr;
  padding: 20px 18px 20px 18px;
  background-color: white;
  box-shadow: 2px 2px 2px 1.47px rgba(89, 89, 89, 0.33);
  // overflow: hidden;
  width: 100%;
  height: auto;
  margin-bottom: 2px;
  box-shadow: none;
  border-radius: none;
  // background-color: aqua;
  margin-left: 0;
  // z-index: 999;
}

.card-content {
  display: flex;
  flex-direction: row;

  justify-content: flex-start;
  align-items: center;
  position: relative;
  // background-color: yellow;
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 0;
  min-width: 100%;
  width: 100%;
  height: 120px;
  border-radius: 1rem;
  margin-left: 12px;
  box-shadow: 2px 2px 2px 1.47px rgba(89, 89, 89, 0.33);
}
.table-container {
  min-width: 515px;
  max-width: 520px;
  width: 100%; /* Take up the available space */
  // background-color: pink;
  // margin-right: 1rem;
}
td {
  font-family: "Calibri-Regular", sans-serif;
  font-size: 10px;
  font-weight: 600;
}
td:after {
  content: "\00a0\00a0\00a0"; /* Unicode for a non-breaking space */
}
tbody tr td:nth-child(3) {
  padding-left: 3rem;
  margin-top: 2px;
  // background-color: yellow;
}
tbody tr td:nth-child(4) {
  color: #548235;
  // background-color: yellow;
}
tbody tr td:nth-child(5) {
  padding-left: 3rem;
}
tbody tr td:nth-child(5),
tbody tr td:nth-child(5) + td {
  position: relative;
  top: -3px;

  // background-color: yellow;
}

.info {
  display: flex;
  flex-direction: column;
  // margin-top: -50px;
  // min-width: 180px;
  white-space: normal;
  max-width: 32ch;
  width: 100%;
  // width: 100%;
  // background-color: red;
  margin-right: 10px;
}

.info-label {
  font-family: "Calibri-bold", sans-serif;
  font-size: clamp(0.8rem, 4.5vw, 1.8rem);
  // background-color: lightblue;
  // word-wrap: nowwrap;
}

.info-value {
  font-family: "Calibri-Regular", sans-serif;
  font-weight: 600;
  margin-top: 4px;
}
.circle {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  // margin-top: 18px;
  padding: 20px;

  border-radius: 100%;
  background-color: white;

  margin-right: 18px;

  margin-left: -34px;
  box-shadow: 2px 2px 2px 1.47px rgba(89, 89, 89, 0.33);
  // margin-bottom: 20px;
}
.show-image {
  height: 92px;
  width: 92px;
  border-radius: 50%;
  // background-color: #548235;
  // transition: 0.5s all ease-in-out;
}

.popup-content {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  z-index: 999; /* Ensure the popup is on top of other elements */
}

.popup {
  display: flex;
  position: fixed;
  // top: 0;
  // left: 0;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 998;
}

.large-image {
  max-width: 100vw;
  max-height: 100vh;
}

.close-btn {
  position: absolute;
  top: 10px;
  right: 15px;
  font-size: 35px;
  cursor: pointer;
  color: white; 
}

.link-section {
  min-width: 150px;

  width: 100%; 
  // background-color: pink;
  margin-left: 10px;
  margin-right: 5px;
}
.link-section tbody td:nth-child(odd),
.link-section tbody td:nth-child(even) {
  font-family: "Calibri-bold", sans-serif;
  font-size: clamp(0.9rem, 3.5vw, 1.6rem);
  word-wrap: normal;

  // background-color: yellow;
}

@media screen and (min-width: 220px) and (max-width: 494px) {
  .grid {
    width: calc(100% + 800px);
    // background-color: red;

    padding-left: 25px;
  }
  .card-content {
    width: calc(100% + 2px);
    // background-color: orange;
  }
  div.scrollmenu {
    overflow-x: auto;
    white-space: nowrap;
    // position: absolute;
  }
  .arrow-position {
    transition: opacity 0.3s ease-in-out;
  }
  .filter-icon-container {
    transition: opacity 0.3s ease-in-out;
  }
  .text-position {
    transition: opacity 0.3s ease-in-out;
  }
  .invisible {
    opacity: 0 ;
    pointer-events: none ; /* Disable pointer events when invisible */
  }
}
@media screen and (min-width: 495px) and (max-width: 1177px) {
  .grid {
    width: calc(100% + 800px);
    // background-color: yellow;
    padding-right: 300px;
    margin-left: 30px;
  }
  div.scrollmenu {
    overflow-x: auto;
    white-space: nowrap;
    // position: absolute;
  }
  .arrow-position {
    transition: opacity 0.3s ease-in-out;
  }
  .filter-icon-container {
    transition: opacity 0.3s ease-in-out;
  }
  .text-position {
    transition: opacity 0.3s ease-in-out;
  }
  .invisible {
    opacity: 0 ;
    pointer-events: none ; /* Disable pointer events when invisible */
  }

  .card-content {
    width: calc(100% + 250px);
    // background-color: yellow;
    // margin-left: 30px;
  }
  .info {
    min-width: 40ch;
    width: 100%;
  }
}

@media screen and (min-width: 1178px) and (max-width: 1264px) {
  div.scrollmenu {
    overflow-x: auto;
    white-space: nowrap;
    // position: absolute;
  }
  .arrow-position {
    transition: opacity 0.3s ease-in-out;
  }
  .filter-icon-container {
    transition: opacity 0.3s ease-in-out;
  }
  .text-position {
    transition: opacity 0.3s ease-in-out;
  }
  .invisible {
    opacity: 0 ;
    pointer-events: none ;
  }
 
  // }
  .grid {
    width: calc(100% + 200px);
    // background-color: pink;
    padding-right: 150px;
    margin-left: 35px;
    // overflow-x: auto;
  }

  .card-content {
    width: calc(100% + 100px);
    // background-color: red;
  }
  .table-container {
    margin-right: 25px;
  }
  .info {
    min-width: 40ch;
    width: 100%;
  }
}
@media screen and (min-width: 1265px) {
  // .filter-icon-container {
  // }
  .grid {
    width: 100%;
    // background-color: blue;
    // display: flex;
    // margin-left: -20px;
    padding-left: -10px;
    padding-right: 38px;
  }
  .card-content {
    margin-left: 35px;
    width: 100%;
  }
  .table-container {
    margin-right: 3rem;
    min-width: 530px;
    width: 100%;

    // background-color: blue;
    padding: 8px;
    margin-right: 20px;
  }
  .link-section {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 10px;
    // background-color: yellow;
  }
}

